# OpenMusicManager

./: Cargo.toml
src/: main.rs
src/app/: mod.rs  track.rs
src/app/cli/: gui.rs  mod.rs  spotify.rs
src/app/gui/: application.rs  mod.rs  table.rs  track_list.rs
src/app/gui/services/: mod.rs  spotify.rs
src/app/player/: audio.rs
src/app/services/: error.rs  mod.rs
src/app/services/soundcloud/: mod.rs
src/app/services/spotify/: album.rs  artist.rs  client.rs  copyright.rs  country.rs  episode.rs  external_urls.rs  followers.rs  images.rs  mod.rs  paging.rs  playlist.rs  scope.rs  search.rs  show.rs  track.rs  track_link.rs
src/app/web_client/: client.rs  mod.rs
src/app/web_client/oauth2/: mod.rs
src/services/: mod.rs
src/services/spotify/: album.rs  artist.rs  client.rs  external_ids.rs  external_urls.rs  images.rs  mod.rs  playlist.rs  search.rs  track.rs  track_link.rs
src/services/spotify/authentication/: client.rs  mod.rs  scope.rs  token.rs  web_server.rs
