[package]
name = "open_music_manager"
version = "0.1.0"
authors = ["Andrew Gilbrough <andrew@gilbrough.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["spotify"]
soundcloud = []
google_music = []
spotify = ["web_api", "webbrowser", "base64"]
youtube = []
bandcamp = []
web_api = ["url", "http"]
[dependencies]
url = {version = "2", optional = true}
serde = {version = "1.0", features=["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.6"
reqwest = {version = "0.10", features=["json"]}
clap = "2"
http = {version = "0.2", optional = true}
tokio = {version = "0.2", features = ["rt-threaded", "time", "fs", "stream", "macros", "blocking", "io-util"]}
webbrowser = {version = "0.5", optional = true}
base64 = {version = "0.12", optional = true}